Addition of time and complexity

--- a/README
+++ b/README
@@ -1,11 +1,16 @@
 2. Other options:
   1.
   We could keep a list and remember all the numbers that are used if we randomly receive a number that was used we can request the number again until we get all of the numbers.
-  This is not smart as randomly we do not know of all of the potential options. 
-  2.
+  This is not smart as randomly we do not know of all of the potential options.
     
- 3. 
+3. 
+  Code:
   Time complexity for this option is O(n).
   Space Complexity is O(n)
+  Other Options 1:
+  Time complexity O(n^n) we might get the same number over and over and over
+  Space Complexity O(n) we remember all the numbers we used.
+  
+  
   
   
