--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+1. The function is printAllRandomNumbers(int min, int max) I have it in a code with an exmple for execution. 
+
 2. Other options:
   1.
   We could keep a list and remember all the numbers that are used if we randomly receive a number that was used we can request the number again until we get all of the numbers.
